--- a/src/page-index/mainPage.html
+++ b/src/page-index/mainPage.html
@@ -128,6 +128,6 @@
         </div>
       </div>
     </div>
-    <script src="../js/card.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
