--- a/src/page-login/login.html
+++ b/src/page-login/login.html
@@ -25,7 +25,7 @@
         </form>
         <p id="sign-up-link">
           Don't have an account?
-          <a href="../htmlPages/register.html">Sign up here</a>
+          <a href="../page-registration/register.html">Sign up here</a>
         </p>
       </div>
       <img id="start-pic" src="../img/StartPic.png" />
