Add reg ability

--- a/src/page-index/mainPage.html
+++ b/src/page-index/mainPage.html
@@ -12,23 +12,15 @@
         <h1 class="app-name">Projecto</h1>
         <ul id="task-types">
           <li class="task-types-active">
-            <img src="../img/iconDashboard.png" alt="Dashboard" /><a
-              >Dashboard</a
-            >
+            <img id="iconDashboard" alt="Dashboard" /><a>Dashboard</a>
           </li>
-          <li><img src="../img/iconToDo.png" alt="To Do" /><a>To Do</a></li>
+          <li><img id="iconToDo" alt="To Do" /><a>To Do</a></li>
           <li>
-            <img src="../img/iconInProgress.png" alt="In Progress" /><a
-              >In progress</a
-            >
+            <img id="iconInProgress" alt="In Progress" /><a>In progress</a>
           </li>
-          <li>
-            <img src="../img/iconTesting.png" alt="Testing" /><a>Testing</a>
-          </li>
-          <li><img src="../img/iconDone.png" alt="Done" /><a>Done</a></li>
-          <li>
-            <img src="../img/iconLogOut.png" alt="Log Out" /><a>Log Out</a>
-          </li>
+          <li><img id="iconTesting" alt="Testing" /><a>Testing</a></li>
+          <li><img id="iconDone" alt="Done" /><a>Done</a></li>
+          <li><img id="iconLogOut" alt="Log Out" /><a>Log Out</a></li>
         </ul>
       </div>
 
@@ -46,7 +38,7 @@
         <div class="add-task-section">
           <p>Add task</p>
           <button class="btn-add-task btn">
-            <img src="../img/iconAddTask.png" alt="Add task" />
+            <img id="iconAddTask" alt="Add task" />
           </button>
         </div>
 
@@ -98,7 +90,7 @@
               Add task
             </button>
             <button type="button" id="new-task-close" class="btn">
-              <img src="../img/trash.png" />
+              <img id="icontrash" />
               <p>Delete</p>
             </button>
           </div>
@@ -123,6 +115,5 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
