--- a/src/page-registration/register.html
+++ b/src/page-registration/register.html
@@ -11,7 +11,7 @@
       <div id="main-start">
         <h1 id="slogan">Become a member of our community</h1>
         <p id="form-name">Start right now!</p>
-        <form id="login-form">
+        <form id="register-form">
           <input id="email" type="email" placeholder="Enter your email" />
           <input
             id="username"
@@ -28,7 +28,7 @@
           <button
             id="registerSubmit"
             class="btn btn-login"
-            onclick="e.preventDefault()"
+            onclick="e=>e.preventDefault()"
           >
             Sign up
           </button>
